wip: refactor-nx-package

--- a/packages/amplication-cli/tsconfig.json
+++ b/packages/amplication-cli/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "importHelpers": true,
-    "module": "commonjs",
-    "outDir": "lib",
-    "rootDir": "src",
-    "strict": true,
-    "target": "es2017",
-    "esModuleInterop": true
-  },
-  "include": ["src/**/*"]
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
