--- a/packages/amplication-code-gen-types/tsconfig.json
+++ b/packages/amplication-code-gen-types/tsconfig.json
@@ -1,20 +1,13 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "removeComments": true,
-    "declaration": true,
-    "target": "es2017",
-    "incremental": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "sourceMap": true,
-    "outDir": "dist",
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true
-  },
-  "exclude": ["node_modules", "dist"],
-  "include": ["src"]
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
