--- a/packages/amplication-design-system/tsconfig.json
+++ b/packages/amplication-design-system/tsconfig.json
@@ -1,23 +1,13 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "incremental": true,
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "outDir": "dist",
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": true,
-    "jsx": "react",
-    "downlevelIteration": true
-  },
-  "include": ["src"]
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
