--- a/packages/amplication-scheduler/tsconfig.json
+++ b/packages/amplication-scheduler/tsconfig.json
@@ -1,14 +1,13 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "lib": ["ES2020"],
-    "incremental": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "strict": true
-  },
-  "include": ["src"]
+  "extends": "../../tsconfig.base.json",
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    }
+  ]
 }
