--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,6 +36,45 @@
     "paths": {
       "@amplication/test": [
         "packages/test/src/index.ts"
+      ],
+      "@amplication-cli": [
+        "packages/amplication-cli/src/index.ts"
+      ],
+      "@amplication-client": [
+        "packages/amplication-client/src/index.ts"
+      ],
+      "@amplication-code-gen-types": [
+        "packages/amplication-code-gen-types/src/index.ts"
+      ],
+      "@amplication-data-service-generator": [
+        "packages/amplication-data-service-generator/src/index.ts"
+      ],
+      "@amplication-design-system": [
+        "packages/amplication-design-system/src/index.ts"
+      ],
+      "@amplication-git-pull-request-service": [
+        "packages/amplication-git-pull-request-service/src/index.ts"
+      ],
+      "@amplication-git-service": [
+        "packages/amplication-git-service/src/index.ts"
+      ],
+      "@amplication-kafka": [
+        "packages/amplication-kafka/src/index.ts"
+      ],
+      "@amplication-nest-logger-module": [
+        "packages/amplication-nest-logger-module/src/index.ts"
+      ],
+      "@amplication-prisma-db": [
+        "packages/amplication-prisma-db/src/index.ts"
+      ],
+      "@amplication-scheduler": [
+        "packages/amplication-scheduler/src/index.ts"
+      ],
+      "@amplication-server": [
+        "packages/amplication-server/src/index.ts"
+      ],
+      "@amplication-storage-gateway": [
+        "packages/amplication-storage-gateway/src/index.ts"
       ]
     }
   },
