--- a/package.json
+++ b/package.json
@@ -302,6 +302,7 @@
     "lodash.clonedeep": "4.5.0",
     "nest-access-control": "2.0.3",
     "nestjs-prisma": "0.16.0",
+    "ng-packagr": "^14.2.1",
     "normalize-path": "3.0.0",
     "npm-run-all": "4.1.5",
     "nx": "14.6.5",
