wip: refactor-nx-package

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "dependencies": {
     "@angular/compiler": "^14.2.1",
     "@angular/compiler-cli": "^14.2.1",
-    "@apollo/client": "3.3.16",
     "@apollo/gateway": "0.42.3",
     "@babel/parser": "7.14.7",
     "@codebrew/nestjs-storage": "0.1.6",
@@ -41,16 +40,7 @@
     "@mui/lab": "5.0.0-alpha.79",
     "@mui/material": "5.9.3",
     "@mui/system": "5.9.3",
-    "@nestjs/common": "8.4.4",
-    "@nestjs/config": "1.1.5",
-    "@nestjs/core": "8.2.3",
-    "@nestjs/graphql": "9.1.2",
-    "@nestjs/jwt": "8.0.0",
     "@nestjs/microservices": "8.4.4",
-    "@nestjs/passport": "8.2.2",
-    "@nestjs/platform-express": "8.2.3",
-    "@nestjs/serve-static": "2.2.2",
-    "@nestjs/swagger": "5.1.5",
     "@ntegral/nestjs-sendgrid": "1.0.0",
     "@oclif/command": "1.8.16",
     "@oclif/config": "1.17.0",
@@ -64,7 +54,6 @@
     "@octokit/rest": "18.12.0",
     "@primer/octicons-react": "16.2.0",
     "@primer/react": "34.7.1",
-    "@prisma/client": "3.15.2",
     "@rooks/use-window-size": "3.6.0",
     "@sendgrid/mail": "7.4.5",
     "@slynova/flydrive": "1.0.3",
@@ -73,19 +62,14 @@
     "ajv": "6.12.6",
     "ajv-errors": "3.0.0",
     "analytics-node": "4.0.1",
-    "apollo-server-express": "3.5.0",
     "ast-types": "^0.14.2",
     "axios": "0.27.2",
-    "bcrypt": "5.0.1",
     "camel-case": "4.1.2",
     "capital-case": "1.0.4",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.13.2",
     "classnames": "2.3.1",
     "cli-ux": "5.5.1",
     "cron": "1.8.2",
     "cronstrue": "1.122.0",
-    "cross-fetch": "3.1.5",
     "cuid": "2.1.8",
     "date-fns": "2.22.1",
     "deepdash-es": "5.3.9",
@@ -94,38 +78,26 @@
     "dotenv": "16.0.0",
     "downloadjs": "1.4.7",
     "events": "3.3.0",
-    "fast-glob": "3.2.11",
-    "formik": "2.2.9",
-    "fs-extra": "10.0.1",
     "get-stream": "6.0.1",
     "glob": "8.0.1",
-    "graphql": "15.7.2",
-    "graphql-type-json": "0.3.2",
     "jsonwebtoken": "8.5.1",
     "kafkajs": "2.0.0",
     "lerna": "5.4.1",
     "lodash": "4.17.21",
     "minimatch": "5.1.0",
-    "nest-access-control": "2.0.3",
     "nest-morgan": "1.0.1",
     "nest-winston": "1.6.2",
     "nestjs-paginate": "2.5.4",
-    "nestjs-prisma": "0.16.0",
     "node-fetch": "2.6.7",
     "node-jose": "2.0.0",
-    "npm-run-all": "4.1.5",
     "octokit": "1.7.1",
     "octokit-plugin-create-pull-request": "3.9.3",
     "ora": "5.4.0",
     "param-case": "3.0.4",
     "pascal-case": "3.1.2",
-    "passport": "0.6.0",
     "passport-github2": "0.1.12",
-    "passport-http": "0.3.0",
-    "passport-jwt": "4.0.0",
     "php-serialize": "4.0.2",
     "pluralize": "8.0.0",
-    "prettier": "2.6.2",
     "prisma": "3.15.2",
     "prisma-schema-dsl": "1.1.5",
     "query-string": "7.1.1",
@@ -145,7 +117,6 @@
     "react-lazylog": "4.5.3",
     "react-query": "3.39.1",
     "react-router-dom": "5.3.3",
-    "react-scripts": "4.0.3",
     "react-select": "5.4.0",
     "react-teleporter": "2.2.1",
     "react-tracking": "8.0.0",
@@ -153,18 +124,14 @@
     "react-use-localstorage": "3.5.3",
     "react-xarrows": "1.7.1",
     "recast": "0.20.5",
-    "reflect-metadata": "0.1.13",
     "replace-ext": "2.0.0",
-    "rimraf": "^3.0.2",
     "rxjs": "7.4.0",
-    "sass": "1.35.2",
     "semver": "7.3.5",
     "skeleton-screen-css": "1.0.1",
     "styled-components": "5.1.1",
     "swagger-ui-express": "4.3.0",
     "tar-stream": "2.2.0",
     "ts-morph": "^13.0.2",
-    "ts-node": "9.1.1",
     "tslib": "1.14.1",
     "url-join": "4.0.1",
     "use-debounce": "3.4.3",
@@ -174,15 +141,7 @@
     "xlsx": "0.16.9",
     "yaml": "1.10.2",
     "yup": "0.32.11",
-    "zlib": "1.0.5",
-    "@amplication/code-gen-types": "^0.16.1",
-    "@amplication/design-system": "^0.16.1",
-    "@amplication/git-service": "^0.16.1",
-    "@amplication/kafka": "^0.16.1",
-    "@amplication/nest-logger-module": "^0.16.1",
-    "typescript": "4.1.2",
-    "@amplication/data-service-generator": "^0.16.1",
-    "@amplication/prisma-db": "^0.16.1"
+    "zlib": "1.0.5"
   },
   "devDependencies": {
     "@apollo/client": "3.6.9",
@@ -341,7 +300,7 @@
     "ts-node": "9.1.1",
     "tsconfig-paths": "3.12.0",
     "type-fest": "0.11.0",
-    "typescript": "4.2.3",
+    "typescript": "4.7.4",
     "web-vitals": "0.2.4",
     "webpack": "5.65.0"
   },
@@ -351,5 +310,8 @@
   },
   "bugs": {
     "url": "https://github.com/amplication/amplication/issues"
+  },
+  "resolutions": {
+  	"**/@types/react": "17.0.34"
   }
 }
