--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -19,7 +19,13 @@
           "tsConfig": "packages/amplication-git-pull-request-service/tsconfig.lib.json"
         }
       },
-      "defaultConfiguration": "production"
+      "defaultConfiguration": "production",
+      "dependsOn": [
+        {
+          "target": "ng-packagr-build",
+          "projects": "dependencies"
+        }
+      ]
     },
     "build": {
       "executor": "@nrwl/js:tsc",
@@ -58,5 +64,10 @@
       }
     }
   },
-  "tags": []
+  "tags": [],
+  "implicitDependencies": [
+	"amplication-nest-logger-module",
+	"amplication-kafka",
+	"amplication-git-service"
+  ]
 }
