--- a/packages/amplication-design-system/tsconfig.lib.json
+++ b/packages/amplication-design-system/tsconfig.lib.json
@@ -4,7 +4,12 @@
     "module": "commonjs",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"]
+    "types": ["node"],
+	"noImplicitAny": false,
+	"allowSyntheticDefaultImports": true,
+	"resolveJsonModule": true,
+	"esModuleInterop": true,
+	"jsx": "react"
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
