--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -3,67 +3,71 @@
   "sourceRoot": "packages/amplication-server/src",
   "projectType": "library",
   "targets": {
-    "ng-packagr-build": {
-      "executor": "@nrwl/angular:ng-packagr-lite",
-      "outputs": [
-        "dist/packages/amplication-server"
-      ],
-      "options": {
-        "project": "packages/amplication-server/ng-package.json"
-      },
-      "configurations": {
-        "production": {
-          "tsConfig": "packages/amplication-server/tsconfig.lib.prod.json"
-        },
-        "development": {
-          "tsConfig": "packages/amplication-server/tsconfig.lib.json"
-        }
-      },
-      "defaultConfiguration": "production",
-      "dependsOn": [
-        {
-          "target": "ng-packagr-build",
-          "projects": "dependencies"
-        }
-      ]
-    },
-    "build": {
-      "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
-      "options": {
-        "outputPath": "dist/packages/amplication-server",
-        "tsConfig": "packages/amplication-server/tsconfig.lib.json",
-        "packageJson": "packages/amplication-server/package.json",
-        "main": "packages/amplication-server/src/index.ts",
-        "assets": [
-          "packages/amplication-server/*.md"
-        ]
-      }
-    },
-    "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
-      "options": {
-        "lintFilePatterns": [
-          "packages/amplication-server/**/*.ts"
-        ]
-      }
+	"link-amplication-deps": {
+	  "executor": "@nrwl/workspace:run-commands",
+	  "options": {
+		"command": "mkdir -p node_modules/@amplication && find dist/packages -type d -depth 1|while read FILE;do  ln -sf ../../$FILE \"node_modules/@amplication/$(basename $FILE |cut -b 13-)\";done"
+	  },
+	  "dependsOn": [
+		{
+		  "target": "ng-packagr-build",
+		  "projects": "dependencies"
+		}
+	  ]
+	},
+	"build": {
+	  "executor": "@nrwl/js:tsc",
+	  "outputs": [
+		"{options.outputPath}"
+	  ],
+	  "options": {
+		"outputPath": "dist/packages/amplication-server",
+		"tsConfig": "packages/amplication-server/tsconfig.lib.json",
+		"packageJson": "packages/amplication-server/package.json",
+		"main": "packages/amplication-server/src/main.ts",
+		"assets": [
+		  "packages/amplication-server/*.md"
+		]
+	  },
+	  "dependsOn": [
+		{
+		  "target": "ng-packagr-build",
+		  "projects": "dependencies"
+		},
+		{
+		  "target": "link-amplication-deps",
+		  "projects": "self"
+		}
+	  ]
+	},
+	"lint": {
+	  "executor": "@nrwl/linter:eslint",
+	  "outputs": [
+		"{options.outputFile}"
+	  ],
+	  "options": {
+		"lintFilePatterns": [
+		  "packages/amplication-server/**/*.ts"
+		]
+	  }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/amplication-server"
-      ],
-      "options": {
-        "jestConfig": "packages/amplication-server/jest.config.ts",
-        "passWithNoTests": true
-      }
-    }
+	  "outputs": [
+		"coverage/packages/amplication-server"
+	  ],
+	  "options": {
+		"jestConfig": "packages/amplication-server/jest.config.ts",
+		"passWithNoTests": true
+	  }
+	}
   },
   "tags": [],
-  "implicitDependencies": []
+  "implicitDependencies": [
+	"amplication-code-gen-types",
+	"amplication-data-service-generator",
+	"amplication-git-service",
+	"amplication-kafka",
+	"amplication-prisma-db"
+  ]
 }
