--- a/packages/amplication-server/tsconfig.lib.json
+++ b/packages/amplication-server/tsconfig.lib.json
@@ -9,7 +9,9 @@
 	"allowSyntheticDefaultImports": true,
 	"resolveJsonModule": true,
 	"esModuleInterop": true,
-	"jsx": "react"
+	"jsx": "react",
+	"baseUrl": ".",
+	"rootDirs": ["./", "node_modules"]
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
